--- a/style/style.css
+++ b/style/style.css
@@ -395,7 +395,141 @@ ul {
   font-family: var(--MSB);
   padding: 11px 0;
 }
+.work__left{
+  position: relative;
+}
+.work__left::before{
+  content: '';
+  display: block;
+  height: 50px;
+  width: 50px;
+  border: 5px solid purple;
+  border-radius: 50%;
+  left: -100px;
+  top: 10px;
+  position: absolute;
+  animation: qwerty 3s alternate infinite;
+}
+.work__left::after{
+  content: '';
+  display: block;
+  height: 70px;
+  width: 70px;
+  border: 5px solid purple;
+  border-radius: 50%;
+  left: -80px;
+  top: 60%;
+  position: absolute;
+  animation: qwerty 3s alternate infinite;
+}
+@keyframes qwerty {
+  0%{
+    transform: rotate(1.1);
+  }
+  50%{
+    transform: rotate(1.2);
+  }
+  100%{
+    transform: rotate(1.3);
+  }
+}
+.work__right{
+  position: relative;
+}
+.work__right::after{
+ content: '';
+ display: block;
+ position: absolute;
+ width: 70px;
+ height: 70px;
+ border: 3px solid purple;
+ right: -90px;
+ top: 60%;
+ animation: animation 3s alternate infinite;
+}
+@keyframes animation{
+  0%{
+    transform: rotate(90deg);
+  }
+  50%{
+    transform: rotate(180deg);
+  }
+  100%{
+    transform: rotate(360deg);
+  }
+}
+/* Footer start */
 
+.footer__ul:nth-of-type(1) .footer__btn{
+  font-size: 24px;
+  line-height: 29px;
+  text-transform: capitalize;
+  font-family: var(--MR);
+  color: var(--purple);
+}
+.footer__ul:nth-of-type(1){
+  column-gap: 30px;
+  margin-right: 100px;
+  margin-top: 30px;
+  margin-bottom: 15px;
+}
+.footer__ul:nth-of-type(2) .footer__btn{
+  font-size: 24px;
+  line-height: 29px;
+  font-family: var(--MR);
+  color: var(--purple);
+}
+.footer__ul:nth-of-type(2){
+  column-gap: 30px;
+}
+  .footer{
+    margin-top: 150px;
+    position: relative;
+  }
+  .footer::before{
+    content: '';
+    display: block;
+    height: 50px;
+    width: 50px;
+    position: absolute;
+    border: 3px solid purple;
+    border-radius: 50%;
+    left: 50px;
+    top: 50%;
+    animation: test 3s alternate infinite;
+  }
+  .footer::after{
+    content: '';
+    display: block;
+    height: 70px;
+    width: 70px;
+    position: absolute;
+    border: 3px solid purple;
+    border-radius: 50%;
+    right: 40%;
+    top: -50%;
+    animation: test 3s alternate infinite;
+  }
+  @keyframes test {
+    0%{
+      transform: scale(1.1);
+    }
+    50%{
+      transform: scale(1.2);
+      transform: translateY(-200%);
+    }
+    100%{
+      transform: translateY(200%);
+    }
+  }
+.footer__img{
+  object-fit: cover;
+  display: block;
+  margin-right: 15%;
+}
+
+/* Footer end */
+ 
 
 
 
@@ -417,6 +551,27 @@ ul {
   }
   .section__about::before {
     display: none;
+  }
+}
+@media (max-width:800px) {
+  .footer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .footer__ul{
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   width: 100%;
+  }
+  .footer__img{
+    display: flex;
+    justify-content: center;
+    width: max-content;
+    margin: 0 auto 0 auto;
+    display: block;
   }
 }
 
